# EENight_light_dance

./: IC.odt  driver issues.odt  readme.md
AC_switch/AC_triac_switch/: AC_triac_switch.kicad_prl  AC_triac_switch.kicad_pro  AC_triac_switch.kicad_sch  BT137.bak  BT137.kicad_sym  sym-lib-table
BMS/BMS_hardware/: #auto_saved_files#  BMS_hardware.kicad_pcb  BMS_hardware.kicad_prl  BMS_hardware.kicad_pro  BMS_hardware.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~BMS_hardware.kicad_sch.lck
HV_H_bridge/: issues
HV_H_bridge/HV_H_bridge/: HV_H_bridge.kicad_prl  HV_H_bridge.kicad_pro  HV_H_bridge.kicad_sch
array2video/: arr2mp4.sh  man.txt  midi2array  midi2array_mod  midi2array_mod.c  midi2array_mod.elf  midi_array.txt
current_sense_amp/current_sense_amp/: LMV358_dual.txt  LMV358_single.txt  TLV9002.bak  TLV9002.kicad_sym  TLV9002_dual.txt  current_sense_amp.kicad_prl  current_sense_amp.kicad_pro  current_sense_amp.kicad_sch  current_sense_amp.wbk  sym-lib-table
inverter_v1/: inverter_v1_readme.md
midi2array/: a.out  main-Alto_Recorder_3.mid  midi2array  midi2array.elf  midi2array_new.c  midi_array.h  midi_array.py  test-Treble_Recorder.mid
midi2array/testing/: midi2array  (+6 more)
midi_file/: main-Alto_Recorder_1.mid  main.mscz  main.mscz.autosave
pico_pwm/pwm/: CMakeLists.txt  pwm.c
software/: CMakeLists.txt  core1.h  core1_old.h  helper.h  main.c  main_all_current.c  main_old.c  midi_array.h  midi_array.py  old_code.txt  pindef.h  setting1.h  setting3.h  setting4.h  setting5.h  upload.sh
tps25200_v1/: fp-info-cache  fp-lib-table  sym-lib-table  test.kicad_pcb  test.kicad_prl  test.kicad_pro  test.kicad_sch
(+99 files in other folders)
